<resources>
    <string name="app_name">相城区农业局水产养殖管理系统</string>
    <string name="app_title">水产养殖管理系统</string>
    <string name="top_page">首页</string>
    <string name="title_chitang">池塘管理</string>
    <string name="title_dangan">档案管理</string>
    <string name="title_wode">我的</string>
    <string name="title_add">添加</string>
    <string name="title_document_id">档案编号:</string>
    <string name="title_document_all">全部</string>
    <string name="title_chosechitang">选择池塘</string>
    <string name="title_doucument_filter">筛选</string>
    <string name="label_document_id">档案编号:</string>
    <string name="title_chitang_catogery">请选择作业类型</string>
    <string name="title_chitang_infoinput">信息录入</string>
    <string name="title_chitang_xiaodu">病害防治信息录入</string>
    <string name="label_chitang_xiaodudate">防治日期</string>
    <string name="label_chitang_xiaoduchi">防治用品</string>
    <string name="hint_chitang_xiaoduchi">请输入防治用品名称</string>
    <string name="label_chitang_xiaodushiji">防治用品</string>
    <string name="hint_chitang_xiaodushiji">选择消毒试剂</string>
    <string name="label_chitang_xiaoduyongliang">用量</string>
    <string name="hint_chitang_xiaoduyongliang">填写消毒用量</string>
    <string name="label_chitang_xiaoduopera">操作人</string>
    <string name="hint_chitang_operator">填写操作人姓名</string>
    <string name="label_chitang_tupian">图片或视频</string>
    <string name="hint_chitang_tupian">上传图片或视频</string>
    <string name="label_chitang_note">备注</string>
    <string name="hint_chitang_note">填写备注</string>
    <string name="title_chitang_toumiao">投苗信息录入</string>
    <string name="label_chitang_toumiaodate">投苗日期</string>
    <string name="label_chitang_source">苗种来源</string>
    <string name="hint_chitang_source">填写购买厂商</string>
    <string name="label_chitang_miaozhong_catogery">投苗种类</string>
    <string name="hint_chitang_miaozhong_catogery">选择投苗种类</string>
    <string name="label_chitang_miaozhong_amount">重量</string>
    <string name="hint_chitang_miaozhong_amount">填写投苗重量</string>
    <string name="title_chitang_weishi">喂食信息录入</string>
    <string name="label_chitang_weishidate">喂食日期</string>
    <string name="label_chitang_weishichi">饲料名称</string>
    <string name="hint_chitang_weishichi">输入购买饲料名称</string>
    <string name="label_chitang_weishisiliao">饲料名称</string>
    <string name="hint_chitang_weishisiliao">填写饲料名称</string>
    <string name="label_chitang_weishigoumaishang">购买商</string>
    <string name="hint_chitang_weishigoumaishang">填写购买商</string>
    <string name="label_chitang_weishiamount">用量</string>
    <string name="hint_chitang_weishiamount">填写饲料用量</string>
    <string name="title_chitang_bulao">捕捞信息录入</string>
    <string name="label_chitang_pulaodate">捕捞日期</string>
    <string name="label_chitang_pulaochi">捕捞池</string>
    <string name="hint_chitang_pulaochi">选择捕捞池</string>
    <string name="label_chitang_pulaocatogery">捕捞种类</string>
    <string name="hint_chitang_pulaocatogery">选择捕捞种类</string>
    <string name="label_chitang_pulaoamount">重量</string>
    <string name="hint_chitang_pulaoamount">填写捕捞重量</string>
    <string name="title_chitang_jiance">检测信息录入</string>
    <string name="label_chitang_jiancedate">检测日期</string>
    <string name="label_chitang_jianceid">检测品种</string>
    <string name="hint_chitang_jianceid">选择检测池</string>
    <string name="label_chitang_jiancexiangmu">检测项目</string>
    <string name="hint_chitang_jiancexiangmu">请填写检测项目</string>
    <string name="label_chitang_jiancejieguo">检测结果</string>
    <string name="hint_chitang_jiancejieguo">选择检测结果</string>
    <string name="label_chitang_jianceoperator">检测人</string>
    <string name="title_chitang_fangshui">日常管理信息录入</string>
    <string name="label_chitang_fangshuidate">管理日期</string>
    <string name="label_chitang_fangshuichi">管理类型</string>
    <string name="hint_chitang_fangshuichi">选择管理类型</string>
    <string name="label_chitang_guanli_touruliang">投入量</string>
    <string name="hint_chitang_guanli_touruliang">请输入投入作业量</string>
    <!-- 池塘 -->
    <string name="title_add_chitang">添加池塘</string>
    <string name="label_chitang_name">池塘名称</string>
    <string name="label_chitang_address">池塘地址</string>
    <string name="label_chitang_area">池塘面积</string>
    <string name="label_chitang_owener">负责人</string>
    <string name="label_chitang_owener_phone">负责人电话</string>
    <string name="label_chitang_discription">池塘简介</string>
    <string name="title_jiancexinxi">检测信息</string>
    <string name="label_name">名称</string>
    <string name="label_area">面积</string>
    <string name="label_owner">姓名</string>
    <string name="label_phone">电话</string>
    <string name="label_address">地址</string>
    <string name="label_yangzhipinzhong">养殖品种</string>
    <string name="label_zuijintoumiao">最近投苗</string>
    <string name="label_zuijinxiaodu">最近消毒</string>
    <string name="label_zuijinbulao">最近捕捞</string>
    <string name="label_zuijinzuoye">最近作业</string>
    <string name="label_caozuoleixing">操作类型</string>
    <string name="label_jiancedanwei">检测单位</string>
    <string name="label_cazuoneirong">操作内容</string>
    <!-- 登录 -->
    <string name="hint_phone">输入您的手机号码</string>
    <string name="hint_password">输入登录密码(6位数字,字母或字符)</string>
    <string name="text_forgetpassword">忘记密码?</string>
    <string name="text_register">注册</string>
    <string name="label_phonenumber">手机号</string>
    <string name="hint_phonenumber">填写手机号</string>
    <string name="label_identifying_code">验证码</string>
    <string name="hint_identifying_code">填写验证码</string>
    <string name="label_passwod">密码</string>
    <string name="hint_passwod">请填写密码</string>
    <string name="label_setnewpasswod">请设置新密码</string>
    <string name="label_newpasswod">新密码</string>
    <string name="text_send">点击发送</string>
    <string name="text_next">下一步</string>
    <string name="hint_new_phonenumber">填写新密码</string>
    <string name="getback_password">找回密码</string>
    <!--首页 -->
    <string name="homepage_text_chitang">池塘概况</string>
    <string name="homepage_text_dangan">档案管理</string>
    <string name="homepage_text_tianjiadangan">添加档案</string>
    <string name="homepage_text_qrcode">二维码申请</string>
    <string name="tabhost_text_seting">我的</string>

    <!-- 池塘-->
    <string name="chitang_addpage_title">添加池塘</string>
    <string name="chitang_addpage_namelabel">池塘名称</string>
    <string name="chitang_addpage_namehint">请填写池塘名称</string>
    <string name="chitang_addpage_addresslabel">池塘地址</string>
    <string name="chitang_addpage_arealabel">池塘面积</string>
    <string name="chitang_addpage_areahint">请填写池塘面积</string>
    <string name="chitang_addpage_owenerlabel">负责人</string>
    <string name="chitang_addpage_owenerhint">请填负责人姓名</string>
    <string name="chitang_addpage_owenerphonelabel">负责人电话</string>
    <string name="chitang_addpage_owenerphonehint">请填负责人联系方式</string>
    <string name="chitang_addpage_picture_label">池塘图片</string>
    <string name="chitang_addpage_discription_label">池塘简介</string>
    <string name="chitang_addpage_discription_hint">请简要介绍说明</string>
    <string name="title_activity_chitang_add">ChitangAdd</string>
    <!-- 我的-->
    <string name="setting_label_persion_info">养殖单位信息</string>
    <string name="setting_label_login_password">登录密码</string>
    <string name="setting_label_get_qrcode">申请二维码</string>
    <string name="setting_label_clear_cache">清除缓存</string>

    <!-- 个人信息-企业-->
    <string name="setting_label_qiye_name">企业名称</string>
    <string name="setting_hint_qiye_name">填写企业名称</string>
    <string name="setting_label_qiye_zizhi">企业资质</string>
    <string name="setting_hint_qiye_zizhi">填写企业资质</string>
    <string name="setting_label_qiye_jianjie">企业简介</string>
    <string name="setting_hint_qiye_jianjie">填写企业简介</string>
    <string name="setting_label_qiye_yingyezhizhao">营业执照</string>
    <string name="setting_hint_qiye_yingyezhizhao">上传营业执照照片</string>
    <string name="setting_label_qiye_yingyerongyu">企业荣誉</string>
    <string name="setting_hint_qiye_yingyerongyu">上传企业荣誉照片</string>

    <!--登录页面 -->
    <string name="login_page_hint_phonenumber">输入您的手机号</string>
    <string name="login_page_hint_password">输入登录密码(6位数字,字母或字符)</string>
    <string name="login_page_text_forgetpassword">忘记密码?</string>
    <string name="login_page_text_register">注册</string>
    <string name="login_page_button_login">安全登录</string>

    <!--时间选择器-->
    <string name="cancle">取消</string>
    <string name="title">请选择时间</string>
    <string name="commit">确定</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="day">日</string>
    <string name="hour">时</string>
    <string name="minute">分</string>

    <string name="select_date">选择日期</string>
    <string name="current_date">当前日期</string>
    <string name="select_time">选择时间</string>
    <string name="current_time">当前时间</string>
    <string name="title_activity_qiyexinxi_add">QiyexinxiAdd</string>
</resources>
