<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dangan_left_margin"
            android:text="@string/label_phone" />

        <EditText
            android:id="@+id/verify_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_phonenumber" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dangan_left_margin"
            android:text="@string/label_identifying_code" />

        <EditText
            android:id="@+id/register_phonenumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_identifying_code" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dangan_left_margin"
            android:text="@string/label_phone" />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/hint_passwod" />
    </LinearLayout>

    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dangan_left_margin"
        android:layout_marginRight="@dimen/dangan_right_margin"
        android:layout_marginTop="15dp"
        android:background="@color/skyblue"
        android:text="@string/login_page_text_register"
        android:textColor="@color/colorWhite" />
</LinearLayout>
