<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--头部-->
    <android.support.v7.widget.Toolbar
        android:id="@+id/base_tool_bar"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/skyblue"
        android:navigationContentDescription="back">

        <ImageView
            android:id="@+id/base_nav_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="10dp"
            android:paddingRight="15dp"
            android:src="@drawable/back" />

        <TextView
            android:id="@+id/base_toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="养殖单位信息"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/base_nav_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="10dp"
            android:background="@drawable/add_item"
            android:clickable="true"
            android:visibility="gone" />
    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/setting_label_qiye_name"
            android:layout_width="@dimen/dangan_label_width"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dangan_left_margin"
            android:gravity="center_vertical"
            android:text="@string/setting_label_qiye_name"
            android:textSize="@dimen/label_size" />

        <EditText
            android:id="@+id/setting_edit_qiye_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/setting_label_qiye_name"
             />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/setting_label_qiye_zizhi"
            android:layout_width="@dimen/dangan_label_width"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dangan_left_margin"
            android:gravity="center_vertical"
            android:text="@string/setting_label_qiye_zizhi"
            android:textSize="@dimen/label_size" />

        <EditText
            android:id="@+id/setting_edit_qiye_zizhi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/setting_label_qiye_zizhi"
             />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/setting_label_qiye_jianjie"
            android:layout_width="@dimen/dangan_label_width"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dangan_left_margin"
            android:gravity="center_vertical"
            android:text="@string/setting_label_qiye_jianjie"
            android:textSize="@dimen/label_size" />

        <EditText
            android:id="@+id/setting_edit_qiye_jianjie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/setting_label_qiye_jianjie"
            android:hint="@string/setting_hint_qiye_jianjie" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/setting_label_qiye_yingyezhizhao"
            android:layout_width="@dimen/dangan_label_width"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dangan_left_margin"
            android:text="@string/setting_label_qiye_yingyezhizhao"
            android:textSize="@dimen/label_size" />

        <EditText
            android:id="@+id/document_media_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/setting_label_qiye_yingyezhizhao"
            android:enabled="false"
            android:hint="@string/setting_hint_qiye_yingyezhizhao" />

        <ImageView
            android:id="@+id/setting_qiye_yingyezhizhao_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dangan_right_margin"
            android:clickable="true"
            android:src="@drawable/add_item" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/yingyezhizhao_upload_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:id="@+id/zhizhao_preview_img1"
            android:layout_width="@dimen/dangan_preview_img_wide"
            android:layout_height="@dimen/dangan_preview_img_height"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dangan_left_margin"
            android:layout_marginRight="@dimen/dangan_right_margin" />

        <ImageView
            android:id="@+id/zhizhao_preview_img2"
            android:layout_width="@dimen/dangan_preview_img_wide"
            android:layout_height="@dimen/dangan_preview_img_height"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dangan_right_margin" />

        <ImageView
            android:id="@+id/zhizhao_preview_img3"
            android:layout_width="@dimen/dangan_preview_img_wide"
            android:layout_height="@dimen/dangan_preview_img_height"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dangan_right_margin" />

        <ImageView
            android:id="@+id/zhizhao_preview_img4"
            android:layout_width="@dimen/dangan_preview_img_wide"
            android:layout_height="@dimen/dangan_preview_img_height"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dangan_right_margin" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone"
        >

        <TextView
            android:id="@+id/setting_label_qiye_yingyerongyu"
            android:layout_width="@dimen/dangan_label_width"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dangan_left_margin"
            android:text="@string/setting_label_qiye_yingyerongyu"
            android:textSize="@dimen/label_size" />

        <EditText
            android:id="@+id/setting_edit_qiye_yingyerongyu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/setting_label_qiye_yingyerongyu"
            android:enabled="false"
            android:hint="@string/setting_hint_qiye_yingyerongyu" />

        <ImageView
            android:id="@+id/setting_qiye_yingyerongyu_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dangan_right_margin"
            android:clickable="true"
            android:src="@drawable/add_item" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/qiyerongyu__upload_image_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:visibility="gone">

        <ImageView
            android:id="@+id/qiyerongyu_preview_img1"
            android:layout_width="@dimen/dangan_preview_img_wide"
            android:layout_height="@dimen/dangan_preview_img_height"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dangan_left_margin"
            android:layout_marginRight="@dimen/dangan_right_margin" />

        <ImageView
            android:id="@+id/qiyerongyu_preview_img2"
            android:layout_width="@dimen/dangan_preview_img_wide"
            android:layout_height="@dimen/dangan_preview_img_height"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dangan_right_margin" />

        <ImageView
            android:id="@+id/qiyerongyu_preview_img3"
            android:layout_width="@dimen/dangan_preview_img_wide"
            android:layout_height="@dimen/dangan_preview_img_height"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dangan_right_margin" />

        <ImageView
            android:id="@+id/qiyerongyu_preview_img4"
            android:layout_width="@dimen/dangan_preview_img_wide"
            android:layout_height="@dimen/dangan_preview_img_height"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/dangan_right_margin" />
    </LinearLayout>

    <Button
        android:id="@+id/addqiyexinxi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:background="@color/skyblue"
        android:text="@string/title_add" />
</LinearLayout>
